# attentionViewer

./: .gitignore  README.md  gradio_app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/vit/: conv2d.py  model.py
src/vit2/: conv2d.py  resnet.py  util.py
