[project]
name = "attentionviewer"
version = "0.1.0"
description = ""
authors = [
    {name = "sontyubo"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "gradio (>=5.23.0,<6.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "torch (==2.1.1)",
    "torchvision (==0.16.1)",
    "torchaudio (==2.1.1)",
    "einops (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "utils", from = "src" },
]
[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "torch_cu121"}
torchvision = {source = "torch_cu121"}
torchaudio = {source = "torch_cu121"}
